<resources>
    <string name="app_name">E-Commerce</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="e_commerse">E-commerce</string>
    <string name="loading">Loading</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="register">REGISTER</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_user">Enter User</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Enter phone number</string>
    <string name="newAccount">Don\'t have an account?</string>
    <string name="singUp">Sign up</string>
    <string name="login_now">Login Now</string>
    <string name="get_password">GET PASSWORD</string>
    <string name="register_now">Register Now</string>
    <string-array name="image_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Cancel</item>
    </string-array>
    <string name="hello_blank_fragment">Hello</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="agregar_categoria">Agregar categoria</string>
    <string name="agregar_producto">Agregar producto</string>
    <string-array name="category_options">
        <item>Editar categoria</item>
        <item>Borrar categoria</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="product_options">
        <item>Editar producto</item>
        <item>Borrar producto</item>
        <item>Cancel</item>
    </string-array>

</resources>